--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "masonry-layout": "^4.2.2",
     "match-sorter": "^6.3.1",
